[package]
name = "hyper_multipart"
version = "0.3.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Http multipart handling for Hyper"
documentation = "https://docs.rs/hyper_multipart"

[dependencies]
hyper = "0.12.24"
futures = "0.1.25"
tokio = "0.1.15"
http = "0.1.15"
mime = "0.3.13"
bytes = "0.4.11"
twoway = "0.2.0"
log = "0.4.6"


[dev-dependencies]
pretty_env_logger = "0.3.0"
dotenv = "0.13.0"
chrono = "0.4.6"

